May 17th, 2009: Alex Burger <alex_b@users.sourceforge.net>
- Added LSB init keywords and actions to snmptt-init.d and changed the
  priority for start / stop so that it starts after snmptrapd and stops
  before snmptrapd.  Thanks to Ville Skytta for the patch.

- Changed the default log path to /var/log/snmptt for Unix and c:\snmpt\log
  for Windows to make it easier to grant write permission to the snmptt
  process.  Thanks to Ville Skytta for the patch.

January 15th, 2009: Alex Burger <alex_b@users.sourceforge.net>
- Re-applied patch for bug 1748512.  Somehow it was added wrong and it
  prevented trap lines that contained single line items inside of quotes
  from working.

August 4th, 2008: Alex Burger <alex_b@users.sourceforge.net>
- Added duplicate_trap_window variable for duplicate trap detection.

March 2nd, 2008: Alex Burger <alex_b@users.sourceforge.net>
- Fixed a bug where with handling escaped quotes in a traq message.
  Bug 1748512.  Thanks to Erwin Abrahamse for the fix.

October 12th, 2007: Alex Burger <alex_b@users.sourceforge.net>
- Updated snmptt-net-snmp-test to test MIB descriptions.

June 16th, 2007: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to snmptt_1.3beta1

June 16th, 2007: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to snmptt_1.2 for release.
- Fixed a bug where snmpttconvertmib would not recognize a MIB file if the
  DEFINITIONS ::= BEGIN line was split across two lines.  Thanks to Alex 
  Peeters for reporting the bug.  Bug 1678270.
- Improved a previous bug fix for when a TRAP-TYPE / NOTIFICATION-TYPE line 
  was split across two lines.  Fix did not allow the trap name to contain
  a symbol such as a -.

June 9th, 2007: Alex Burger <alex_b@users.sourceforge.net>
- Change REGEX to use Text::Balanced instead of split to fix bug with
  REGEX statements that contain captures.

Apr 6th, 2007: Alex Burger <alex_b@users.sourceforge.net>
- Release snmptt_1.2beta3
